Correctly handle client disconnect during initialization phase.
Signed-off-by: Alessandro Villa <alessandro17.villa@mail.polimi.it>